# RobotUltrasoundCalibration

./: .gitignore  CMakeLists.txt  ReadMe.md  test_calibration.m
include/: cpp_calibration_solver.h
matlab_utilities/: addNoiseToImageData.m  checkLineData.m  computeIntersection.m  compute_multiple_intersections.m  define_flange_trajectory.m  eul2rot.m  eul2rotinv.m  plotPhantom.m  processLinesForOptimalSolution.m
src/: cpp_calibration_solver.cpp  cpp_calibration_solver.h  mex_calibration_solver.asv  mex_calibration_solver.cpp  templated_calibration_solver.asv  templated_calibration_solver.h  wire_mathematics.h
